# caseledger

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/routes/: cases.py
cases/: README.md  sample_cases.jsonl
policies/: aumento_limite.yaml  charge_dispute.yaml  contestacao_cobranca.yaml  limit_increase.yaml  onboarding_kyc.yaml
src/caseledger/: __init__.py  case.py  outcomes.py  policy.py  resolver.py
tests/: test_caseledger.py
